--- a/Assets/style.css
+++ b/Assets/style.css
@@ -5,15 +5,25 @@
 .highScores {
     display: flex;
     flex-wrap: nowrap;
-    width: 50%;
-    
-    
+    width: 50%;    
 }
 
 .timer {
     text-align: right;
     display: flex;
     flex-wrap: nowrap;
-    width: 50%;
-    
+    width: 50%;    
 }
+
+.wrapper {
+    margin: auto;
+    height: 500px;
+    width: 500px;
+}
+
+.wrapper h1 {
+    text-align: center;
+}
+
+
+
